public/css/style.css
/* ... */
.contact-info-box .icon {
  display: inline-block;
  width: 65px;
  height: 65px;
  line-height: 62px;
  background: #f7fafd;
  border-radius: 50%;
  font-size: 30px;
  color: #2A4555;
  transition: 0.4s;
}
.contact-info-box h3 {
  font-size: 20px;
  margin: 25px 0 15px;
}
.contact-info-box p {
  margin-bottom: 0;
}
.contact-info-box p a {
  color: #6084a4;
}
.contact-info-box p a:hover {
  color: #2A4555;
}
.contact-info-box:hover {
  transform: translateY(-10px);
}
.contact-info-box:hover .icon {
  color: #ffffff;
  background: #2A4555;
}

#map {
  height: 500px;
  width: 100%;
}

.contact-form .invalid-feedback {
  margin-top: 10px;
}
.contact-form .btn {
  margin-top: 10px;
}
.contact-form .form-check {
  margin-bottom: 10px;
}
.contact-form .form-check label {
  margin: 0;
  font-size: 14px;
  font-weight: 400;
}
.contact-form .form-check label a {
  color: #2A4555;
}

/*================================================
Coming Soon CSS
=================================================*/
.coming-soon-area {
  position: relative;
  z-index: 1;
  min-height: 100vh;
  padding-top: 170px;
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}
.coming-soon-area::before {
  z-index: -1;
  background: linear-gradient(-9deg, #10133B 0%, #10133B 40%, #5D9F7B 100%);
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  content: "";
  opacity: 0.9;
}
.coming-soon-area .social-list {
  text-align: center;
  padding-top: 100px;
}
.coming-soon-area .social-list li {
  display: inline-block;
  padding-right: 20px;
}
.coming-soon-area .social-list li.list-heading {
  display: block;
  color: #ffffff;
  margin-bottom: 10px;
  font-size: 16px;
  font-weight: 500;
}
.coming-soon-area .social-list li a {
  width: 35px;
  height: 35px;
  line-height: 35px;
  background: #2A4555;
  color: #ffffff;
  border-radius: 50%;
  margin: 0 2px;
}
.coming-soon-area .social-list li a svg {
  width: 15px;
}
.coming-soon-area .social-list li a.facebook {
  background-color: #3b5998;
}
.coming-soon-area .social-list li a.twitter {
  background-color: #1da1f2;
}
.coming-soon-area .social-list li a.linkedin {
  background-color: #0077b5;
}
.coming-soon-area .social-list li a.instagram {
  background-color: #c13584;
}
.coming-soon-area .social-list li a:hover, .coming-soon-area .social-list li a:focus {
  background-color: #2A4555;
}

.coming-soon-content {
  text-align: center;
  max-width: 820px;
  margin: -80px auto 0;
}
.coming-soon-content h1 {
  margin-bottom: 30px;
}
.coming-soon-content h2 {
  color: #ffffff;
  font-size: 40px;
}
.coming-soon-content h3 {
  color: #ffffff;
  margin: 25px 0;
}
.coming-soon-content p {
  color: #ffffff;
  font-size: 16px;
  margin: 0 auto;
  max-width: 820px;
}
.coming-soon-content .logo-container {
  margin-bottom: 40px;
}
.coming-soon-content form {
  position: relative;
  margin: 35px auto 55px;
  max-width: 520px;
}
.coming-soon-content form .email-input {
  display: block;
  width: 100%;
  height: 56px;
  border: none;
  box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 5px rgba(255, 255, 255, 0.3);
  border-radius: 40px;
  padding: 15px 25px;
  font-size: 16px;
  outline: 0 !important;
  background: #F1F2F3;
}
.coming-soon-content form .submit-btn {
  position: absolute;
  right: 3px;
  top: 3px;
  height: 50px;
  background: #2A4555;
  color: #ffffff;
  border: none;
  border-radius: 40px;
  width: 130px;
  outline: 0 !important;
  cursor: pointer;
  text-transform: uppercase;
  transition: 0.5s;
  font-size: 15px;
  font-weight: 500;
}
.coming-soon-content form .submit-btn:hover, .coming-soon-content form .submit-btn:focus {
  background-color: #5D9F7B;
}
.coming-soon-content #timer div {
  background: #ffffff;
  display: inline-block;
  border-radius: 50%;
  width: 110px;
  height: 110px;
  color: #5D9F7B;
  box-shadow: 0px 0px 0px 5px rgba(255, 255, 255, 0.5);
  margin: 0 10px;
  padding-top: 18px;
  font-size: 35px;
  font-weight: 500;
}
.coming-soon-content #timer div span {
  display: block;
  margin-top: -4px;
  color: #6084a4;
  font-size: 15px;
}
.coming-soon-content .button-group {
  display: flex;
  justify-content: space-around;
  margin: 45px 0;
}
.coming-soon-content .button-group a {
  max-width: 50%;
}
.coming-soon-content .button-group .btn-primary {
  background: #5D9F7B;
  box-shadow: 0 13px 27px 0 rgba(42, 69, 85, 0.25);
}
.coming-soon-content .button-group .btn-primary:hover, .coming-soon-content .button-group .btn-primary:focus {
  background: #2A4555;
  box-shadow: 0 13px 27px 0 rgba(72, 123, 110, 0.25);
}
.coming-soon-content .who-we-are .col1 {
  text-align: left;
}
.coming-soon-content .who-we-are .col1 h3 {
  text-align: center;
}
.coming-soon-content .who-we-are .col2 {
  text-align: right;
}
.coming-soon-content .who-we-are .col2 h3 {
  text-align: center;
}

/*================================================
404 Error CSS
=================================================*/
.error-area {
  height: 100vh;
}

.error-content {
  text-align: center;
  margin-top: -70px;
}
.error-content .notfound-404 {
  position: relative;
  height: 280px;
  z-index: -1;
  margin-bottom: 30px;
}
.error-content .notfound-404 h1 {
  font-size: 230px;
  font-weight: 900;
  margin: 0;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  background: url("/images/oops-bg.jpg") no-repeat;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-size: cover;
  background-position: center;
}
.error-content h3 {
  font-weight: 600;
  font-size: 25px;
  margin-bottom: 15px;
}
.error-content p {
  max-width: 550px;
  margin: 0 auto 25px;
}

/*================================================
CTA CSS
=================================================*/
.cta-area {
  background: linear-gradient(135deg, #2A4555 0%, #5D9F7B 100%);
}

.cta-content h3 {
  color: #ffffff;
  margin: 0;
  font-size: 24px;
  font-weight: 600;
}
/* ... */

